# Qingyu_backend

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .golangci.yml  API测试与文档完善工作完成报告_2025-10-18.md  MODULE.md  Makefile  NEXT_STEPS_PHASE3.md  Phase2_Complete_Summary.md  Phase2_Day1_Summary.md  Phase2实施总结_2025-10-27.md  README.md  REFACTOR_TODO.md  TASK_COMPLETION_SUMMARY_2025-10-24.md  ai_service.pb.go  ai_service_grpc.pb.go  batch_replace_admin.sh  batch_replace_shared.sh  build_errors.txt  build_errors_final.txt  build_errors_final2.txt  check_shared.sh  config.docker.yaml  config.yaml  coverage  coverage_admin.out  coverage_all.out  coverage_analytics_api.out  coverage_analytics_service.out  coverage_auth.html  coverage_auth.out  coverage_benchmark.out  coverage_cache.out  coverage_category.out  coverage_config.out  coverage_converter.out  coverage_converters_new.out  (+34 more)
api/: handlers.go  (+1 more)
python_ai_service/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LangChain1.0迁移指南_2025-1105.md  PHASE3_GRPC_FILES_SUMMARY.txt  PHASE3_MVP_IMPLEMENTATION.md  PHASE3_QUICKSTART.md  QUICKSTART.md  README.md  pyproject.toml  quick_test.py  requirements.txt  run.bat  run.sh  run_grpc_server.py  run_grpc_test.py  test_data_conversion_fix.py
python_ai_service/doc/: Service层快速参考_2025-1028.md
python_ai_service/docker/: .dockerignore  Dockerfile  Dockerfile.grpc
python_ai_service/proto/: README.md  ai_service.proto
python_ai_service/scripts/: generate_grpc_proto.bat  generate_proto.bat  generate_proto.sh  start_grpc_server.bat  test_grpc_phase3.bat
(+3835 files in other folders)
